# tokagrad

./: .gitignore  LICENSE  README.md  app_streamlit.py  pyproject.toml
external_models/neural/: .gitignore  LICENSE.rst  Makefile  brainfuse.py  brainfuse_lib.c  brainfuse_lib.h  brainfuse_lib.inc  brainfuse_run.c  brainfusetf.c  brainfusetf.py  brainfusetf_lib.c  brainfusetf_lib.h  brainfusetf_lib.inc  compile.sh  readme.md  tf_client_server_test.py
external_models/neural/eped1nn/: eped1nn  eped1nn_eped1  readme.md  toq_profiles.f90  toq_profiles_test.f90
external_models/neural/tglfnn/: tglfnn
inputs/: ITERbaseline.eqdsk  KSTAR.eqdsk  README.md  iter_fixed_boundary.json  iter_flattop_0d.json  iter_flattop_bgb.json  iter_flattop_qlknn.json  iter_flattop_tglfnn.json  iter_waveform_bgb.json  iter_waveform_fixed_boundary.json  iter_waveform_lmode.json  iter_waveform_transition.json  kstar.json  reactor_design.json
scripts/: check_autodiff_gradients.py  check_eped1nn_jax.py  check_fusion_surrogates.py  check_neonn_jax.py  check_tglfnn_jax.py  export_fusion_surrogates_qlknn_snapshot.py  install_fusion_surrogates.py  run_jacobian.py  run_optimization.py  run_simulation.py
src/tokagrad/: __init__.py  app_runtime.py  config.py  controls.py  current.py  density.py  diagnostics.py  eped1nn_adapter.py  eped1nn_jax.py  equilibrium.py  fast_ions.py  grid.py  heating.py  input_config.py  neoclassical.py  neonn_jax.py  optim_differentiable.py  pedestal.py  profiles.py  qlknn_adapter.py  solver.py  tglfnn_jax.py  transport.py  waveforms.py  zero_d.py
(+147 files in other folders)
