[project]
name = "TokaGrad"
version = "0.1.0"
description = "Full-discharge end-to-end differentiable 1.5D tokamak simulator"
requires-python = ">=3.10"
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "matplotlib",
  "streamlit",
  "pandas",
  "optax",
  "fusion_surrogates",
]

[tool.setuptools.packages.find]
where = ["src"]
